--- a/src/MauiBlazor.Markup/MauiBlazor.Markup/release-notes.txt
+++ b/src/MauiBlazor.Markup/MauiBlazor.Markup/release-notes.txt
@@ -1,3 +1,3 @@
-What's new in ver. 1.0.0-pre3:
+What's new in ver. 1.0.0-pre4:
 
-This package is built top of .NET MAUI Preview 13 dependencies, latest release as of Feb 2022.
+This package is released top of .NET MAUI Preview 14 dependencies, latest release as of Mar 2022.
