Markup extension methods, ThemeService and selective service registration

--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
@@ -1,4 +1,4 @@
-What's new in ver. 1.0.0-pre2:
+What's new in ver. 1.0.0-pre3:
 
 Updated release of VijayAnand.MauiToolkit.Core NuGet package and is built on top of .NET 6.
 
@@ -11,5 +11,6 @@ To start with defines the following abstractions:
 1. Dialogs - IDialogService
 2. Navigation - INavigationService
 3. Share - IShareService
+4. Theme - IThemeService
 
 Added a Model class for UserToken and frequently used Constants for OAuth / OIDC authentication.
