--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
@@ -1,4 +1,4 @@
-What's new in ver. 1.0.0-pre6:
+What's new in ver. 1.0.0-pre7:
 
 Updated release of VijayAnand.MauiToolkit.Core NuGet package and is built on top of .NET 6.
 
@@ -15,4 +15,4 @@ To start with defines the following abstractions:
 3. Share - IShareService
 4. Theme - IThemeService
 
-Added a Model class for UserToken and frequently used Constants for OAuth / OIDC authentication.
+A Model class for UserToken and frequently used Constants for OAuth / OIDC authentication.
