--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
@@ -1,4 +1,4 @@
-What's new in ver. 1.0.0-pre8:
+What's new in ver. 1.0.0-pre10:
 
 Updated release of VijayAnand.MauiToolkit.Core NuGet package and is built on top of .NET 6.
 
@@ -6,7 +6,7 @@ Methods in the DialogService have been suffixed with Async.
 
 The objective is to ease the development of the Razor Class Library (RCL) so that it can be shared with all Blazor targets (.NET MAUI, Blazor Server and WebAssembly, Windows Forms, and WPF).
 
-And .NET MAUI targets Android, iOS, macOS (via Mac Catalyst), and Windows (via WinUI 3).
+And .NET MAUI targets Android, iOS, macOS (via Mac Catalyst), Tizen, and Windows (via WinUI 3).
 
 To start with defines the following abstractions:
 
