--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/release-notes.txt
@@ -1,4 +1,4 @@
-What's new in ver. 1.0.0-pre12:
+What's new in ver. 1.0.0:
 
 Updated release of VijayAnand.MauiToolkit.Core NuGet package and is built on top of .NET 6.
 
