--- a/src/MauiBlazor.Markup/MauiBlazor.Markup/release-notes.txt
+++ b/src/MauiBlazor.Markup/MauiBlazor.Markup/release-notes.txt
@@ -1,3 +1,5 @@
-What's new in ver. 1.0.0-pre7:
+What's new in ver. 1.0.0:
 
-This version of package is released on top of .NET MAUI RC3, latest release as of May 2022.
+This version of package is released on top of .NET MAUI GA stable version.
+
+Join me on Developer Thoughts, https://egvijayanand.in/, an exclusive blog for .NET MAUI and Blazor.
