--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/release-notes.txt
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/release-notes.txt
@@ -1,7 +1,24 @@
-What's new in ver. 1.0.1:
+What's new in ver. 1.0.2-pre1:
 
-Route parameters in the Navigation service methods can also be passed as Tuple (string key, object value).
+Added a new Markup Method, named AddSubMenuGroup, to define a sub-menu group within a menu group to manage the multi-level menu.
 
-Now GoBackAsync method also takes parameters.
+Here is an example of a sub-menu group:
+
+"Change Location" is a first level menu group (under the "Locations" top level menu item) and "India is a second level menu group within that.
+
+This way multi-level menu can be defined.
+
+MenuBarItems.Add(new MenuBarItem().Title("Locations")
+                                  .AddMenuGroup(new MenuFlyoutSubItem().Title("Change Location")
+                                                                       .AddSubMenuItem(new MenuFlyoutItem().Title("New York, USA"))
+                                                                       .AddSubMenuItem(new MenuFlyoutItem().Title("London, UK"))
+                                                                       .AddSubMenuItem(new MenuFlyoutItem().Title("Cape Town, RSA"))
+                                                                       .AddSubMenuItem(new MenuFlyoutItem().Title("Beijing, PRC"))
+                                                                       .AddSubMenuGroup(new MenuFlyoutSubItem().Title("India")
+                                                                                                               .AddSubMenuItem(new MenuFlyoutItem().Title("Chennai, TN"))
+                                                                                                               .AddSubMenuItem(new MenuFlyoutItem().Title("Kolkata, WB"))
+                                                                                                               .AddSubMenuItem(new MenuFlyoutItem().Title("Mumbai, MH"))
+                                                                                                               .AddSubMenuItem(new MenuFlyoutItem().Title("New Delhi, NCR"))))
+                                  .AddMenuItem(new MenuFlyoutItem().Title("Add a Location").BindCommand("AddLocationCommand")));
 
 Join me on Developer Thoughts, https://egvijayanand.in/, an exclusive blog for .NET MAUI and Blazor.
