--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/release-notes.txt
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/release-notes.txt
@@ -1,10 +1,12 @@
-What's new in ver. 1.0.2-pre1:
+What's new in ver. 1.0.2-pre2:
+
+Fix on top of the earlier preview release.
 
 Added a new Markup Method, named AddSubMenuGroup, to define a sub-menu group within a menu group to manage the multi-level menu.
 
 Here is an example of a sub-menu group:
 
-"Change Location" is a first level menu group (under the "Locations" top level menu item) and "India is a second level menu group within that.
+"Change Location" is a first level menu group (under the "Locations" top level menu item) and "India" is a second level menu group within that.
 
 This way multi-level menu can be defined.
 
