--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/release-notes.txt
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/release-notes.txt
@@ -1,5 +1,16 @@
-What's new in ver. 1.0.1-pre1:
+What's new in ver. 1.0.1-pre2:
 ------------------------------
+1. Added utility methods in the ResourceHelper class for accessing commonly used types such as Color, Converters, Style and ResourceDictionary.
+
+AppColor
+AppConverter
+AppStyle
+GetXamlResourceDictionary
+
+2. For Xamarin.Forms supported package, dependent version of Xamarin.CommunityToolkit.Markup bumped to v2.0.4 (the GA compatible version).
+
+v1.0.1-pre1:
+
 Added a new helper method named GetXamlResource<T> (in the ResourceHelper class) to obtain an instance for XAML only type definition.
 
     Configured with <?xaml-comp compile="true" ?> and No code-behind file with C# type definition (hence no x:Class attribute).
